gcc/testsuite/gdc.test/fail_compilation/test1.d
/*
TEST_OUTPUT:
---
fail_compilation/test1.d(8): Error: no identifier for declarator `fail`
---
*/
fail
